--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/ndarray": "^1.0.14",
+    "@types/pngjs": "^6.0.5",
     "data-uri-to-buffer": "0.0.3",
     "jpeg-js": "^0.4.1",
     "mime-types": "^2.0.1",
@@ -23,7 +25,8 @@
     "brfs": "^1.2.0",
     "browserify": "^3.44.0",
     "tap": "^10.7.0",
-    "tape": "^2.12.3"
+    "tape": "^2.12.3",
+    "typescript": "^5.8.3"
   },
   "scripts": {
     "test": "tap test/*.js",
